# Coeur-ORA-GrenaPrompt

./: LICENSE  License  README.md  demo_clients.json  ora_core.py  pyproject.toml
docs/: ORA_CORE LIGHT DEMO  ORA_CORE_v2.1.2_GL-CORE-LOCK_WhitePaper_layout.docx  ORA_CORE_v3.0_GL-CORE-LOCK_Audit_Impact.docx  ORA_CORE_v3_WhitePaper_Partie_III_Projection_Long_Terme.docx
maj_0_demo/: README.md  brief_template.md
maj_0_demo/maj_0_demo/: brief_demo.json  maj0_questionnaire.json  run_maj0.py
