[project]
name = "ora-core"
version = "1.2.0"
description = "Coeur ORA — GrenaPrompt framework (mini PoC)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "APACHE 2.0"}
authors = [{name="TwinsProduction", email="oragrenatprompt@gmail.com"}]
dependencies = []

[project.scripts]
ora = "ora_core:main"

[tool.pytest.ini_options]
pythonpath = ["."]
